test_regress/t/t_interface_modport_expr.out
%Error-UNSUPPORTED: t/t_interface_modport_expr.v:15:22: Unsupported: Modport expressions (IEEE 1800-2023 25.5.4)
   15 |   modport mp1(input .a(sig_a), output .b(sig_b));
      |                      ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_interface_modport_expr.v:15:22: Modport item not found: 'a'
   15 |   modport mp1(input .a(sig_a), output .b(sig_b));
      |                      ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_interface_modport_expr.v:15:40: Unsupported: Modport expressions (IEEE 1800-2023 25.5.4)
   15 |   modport mp1(input .a(sig_a), output .b(sig_b));
      |                                        ^
%Error: t/t_interface_modport_expr.v:15:40: Modport item not found: 'b'
   15 |   modport mp1(input .a(sig_a), output .b(sig_b));
      |                                        ^
%Error-UNSUPPORTED: t/t_interface_modport_expr.v:16:22: Unsupported: Modport expressions (IEEE 1800-2023 25.5.4)
   16 |   modport mp2(input .a(sig_c), output .b(sig_d));
      |                      ^
%Error: t/t_interface_modport_expr.v:16:22: Modport item not found: 'a'
   16 |   modport mp2(input .a(sig_c), output .b(sig_d));
      |                      ^
%Error-UNSUPPORTED: t/t_interface_modport_expr.v:16:40: Unsupported: Modport expressions (IEEE 1800-2023 25.5.4)
   16 |   modport mp2(input .a(sig_c), output .b(sig_d));
      |                                        ^
%Error: t/t_interface_modport_expr.v:16:40: Modport item not found: 'b'
   16 |   modport mp2(input .a(sig_c), output .b(sig_d));
      |                                        ^
%Error: t/t_interface_modport_expr.v:28:18: Can't find definition of 'a' in dotted variable/method: 'i.a'
   28 |   assign i.b = i.a;
      |                  ^
%Error: t/t_interface_modport_expr.v:28:12: Can't find definition of 'b' in dotted variable/method: 'i.b'
   28 |   assign i.b = i.a;
      |            ^
%Error: t/t_interface_modport_expr.v:22:18: Can't find definition of 'a' in dotted variable/method: 'i.a'
   22 |   assign i.b = i.a;
      |                  ^
%Error: t/t_interface_modport_expr.v:22:12: Can't find definition of 'b' in dotted variable/method: 'i.b'
   22 |   assign i.b = i.a;
      |            ^
%Error: Exiting due to
